# rater-metric-calculator

./: README.md  pyproject.toml
.github/workflows/: ci.yml
rater_metric_calculator/: calculate_rater_metrics.py
rater_metric_calculator/llm/: analyze_with_llm.py
rater_metric_calculator/llm/prompts/: basic_prompt.py  input_template_placeholder.py
tests/: test_analyze_with_llm.py  test_calculate_rater_metrics.py
