[tool.poetry]
name = "rater-metric-calculator"
version = "0.1.0"
description = ""
authors = ["Jason Robison <jrrobison1@hoodsen.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
krippendorff = "^0.7.0"
pandas = "^2.2.2"
statsmodels = "^0.14.2"
scipy = "^1.14.0"
pingouin = "^0.5.4"
mdutils = "^1.6.0"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
